--- a/testes/entity/fields/boolean.html
+++ b/testes/entity/fields/boolean.html
@@ -1,2 +1,4 @@
-<label for="{{name}}">{{label}}</label>
-<input type="checkbox" id="{{name}}_{{entity.name}}"/>
+<div class="form-group form-check">
+    <input type="checkbox" class="form-check-input" id="{{name}}_{{reference.name}}">
+    <label class="form-check-label" for="{{name}}_{{reference.name}}">{{label}}</label>
+</div>
