--- a/testes/entity/fields/number.html
+++ b/testes/entity/fields/number.html
@@ -1,1 +1,5 @@
-<input type="{{type}}">
+<div class="form-group">
+    <label for="{{name}}">{{label}}</label>
+    <input type="number" class="form-control" id="{{label}}" required="{{required}}" {{#min}} min="{{min}}"
+        {{/min}} placeholder="{{placeholder}}">
+</div>
