--- a/testes/entity/fields/text.html
+++ b/testes/entity/fields/text.html
@@ -1,2 +1,4 @@
-<label for="{{name}}">{{label}}</label>
-<input id="{{name}}" type="{{type}}" {{#minlength}} minlength="{{minlength}}" {{/minlength}} placeholder="{{placeholder}}" required="{{required}}">
+<div class="form-group">
+    <label for="{{name}}">{{label}}</label>
+    <input type="text" class="form-control" id="{{label}}" required="{{required}}" {{#minlength}} minlength="{{minlength}}" {{/minlength}} placeholder="{{placeholder}}">
+</div>
